<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_modify"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_dialog_btn"
        android:text="@string/modify"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_dialog_btn"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_dialog_btn"
        android:text="@string/cancel"
        android:textSize="18sp" />


</LinearLayout>